tests/cli/since-on-future-package.wit
// FAIL: component embed --dummy %

package test:invalid@0.1.0;

interface foo {
  a: func(s: string) -> string;

  @since(version = 0.1.1)
  b: func(s: string) -> string;

  @since(version = 0.1.1, feature = c-please)
  c: func(s: string) -> string;
}

world test {
  import foo;
  export foo;
}